CHK-2188 feat: auth request with wallet (#369)
* feat: updated commons version

* feat: updated api spec with wallet details into auth request api

* feat:modified retrieveInformationFromAuthorizationRequest method for return object

* feat:added wallet openapi generation

* feat:added wallet client env variable and tests

* feat:added call getWalletInfo using client into TransactionsService

* feat: set contract id into AuthorizationRequestData for handle wallet payment into TransactionRequestAuthorizationHandlerTest

* feat: added logic for handle WalletAuthRequestDetailsDto into npgAuthRequestPipeline flow

* fix: removed log

* fix: added logic for execute NPG build and env variable sessionUrl

* feat:added orderId generation

* feat:added defaultApiKey for invoke NPG build

* feat: added client id into redirectUrl for IO payment

* feat: added string builder

* feat: added query param for gdi-check

* feat: added string builder

* feat: added transaction service test for walletDetails

* feat: added test for method requestNpgBuildSession into PaymentGatewayClient

* feat: added logic for handle orderId generic and tests

* fix: test postepay

* fix: modified code review ecommerce local branch

* feat: handle save build sessionId for wallet flow

* fix: update wallet uri

* fix: cast auth detail during confirm payment

* feat: saved transactionDocument into cache and removed update session call for wallet auth request

* feat: added test for TransactionRequestAuthorizationHandler v2

* trigger CR pipeline

* fix: tests into PaymentGatewayClient

* fix: openapi example

* trigger CR pipeline

* fix: update commons version from 0.29.4 to 0.30.0

* fix: update commons version from 0.30.0 to 1.0.0

* fix: fragment

* fix: outcomeResultUrl with #

* fix: orElseThrow for contractId into PaymentGatewayClient.java

* fix: used constructor injection into WalletClient.java

* fix: TransactionDocument 

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_APY_KEY=payment-method-api-key
 
+WALLET_URI="http://pagopa-wallet-service:9090"
+WALLET_READ_TIMEOUT=10000
+WALLET_CONNECTION_TIMEOUT=10000
+WALLET_API_KEY=wallet-api-key
+
 AFM_URI="http://pagopa-gec-mock:3000/afm/node/calculator-service/v1/fees"
 AFM_READ_TIMEOUT=10000
 AFM_CONNECTION_TIMEOUT=10000
@@ -65,6 +70,12 @@ NPG_CONNECTION_TIMEOUT=10000
 NPG_API_KEY="npg-api-key"
 NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
 NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}
+TRANSACTION_DOCUMENT_TTL=600
 ECOMMERCE_EVENT_VERSION=V2
 
 SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED=true
+
+SESSION_URL_BASEPATH="https://localhost:1234"
+SESSION_URL_OUTCOME_SUFFIX="/esito"
+SESSION_URL_CANCEL_SUFFIX="/cancel"
+SESSION_URL_NOTIFICATION_URL="http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
