--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,11 @@ ecommercePaymentMethods.readTimeout=${ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT}
 ecommercePaymentMethods.connectionTimeout=${ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT}
 ecommercePaymentMethods.apiKey=${ECOMMERCE_PAYMENT_METHODS_APY_KEY}
 
+wallet.uri=${WALLET_URI}
+wallet.readTimeout=${WALLET_READ_TIMEOUT}
+wallet.connectionTimeout=${WALLET_CONNECTION_TIMEOUT}
+wallet.apiKey=${WALLET_API_KEY}
+
 notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
 notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
 notificationsService.connectionTimeout=${NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT}
@@ -71,9 +76,15 @@ checkout.basePath=${CHECKOUT_BASE_PATH}
 npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
-npg.client.key=${NPG_API_KEY}
+npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
 ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
+
+sessionUrl.basePath=${SESSION_URL_BASEPATH}
+sessionUrl.outcomeSuffix=${SESSION_URL_OUTCOME_SUFFIX}
+sessionUrl.cancelSuffix=${SESSION_URL_CANCEL_SUFFIX}
+sessionUrl.notificationUrl=${SESSION_URL_NOTIFICATION_URL}
+transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
