--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -18,6 +18,11 @@ ecommercePaymentMethods.readTimeout=10000
 ecommercePaymentMethods.connectionTimeout=10000
 ecommercePaymentMethods.apiKey=payment-method-api-key
 
+wallet.uri=https://localhost/wallet
+wallet.readTimeout=10000
+wallet.connectionTimeout=10000
+wallet.apiKey=wallet-api-key
+
 paymentTransactionsGateway.uri=http://localhost/pgs
 paymentTransactionsGateway.readTimeout=10000
 paymentTransactionsGateway.connectionTimeout=10000
@@ -71,9 +76,14 @@ checkout.basePath=http://localhost/checkout
 npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
-npg.client.key=npg_key
+npg.client.apiKey=npg_key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
 ecommerce.event.version=V2
-
+transactionDocument.ttl=1000
 ecommerce.send-payment-result-for-tx-expired.enabled=false
+
+SESSION_URL_BASEPATH="https://localhost:1234"
+SESSION_URL_OUTCOME_SUFFIX="/esito"
+SESSION_URL_CANCEL_SUFFIX="/cancel"
+SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
