--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -88,4 +88,4 @@ ecommerce.send-payment-result-for-tx-expired.enabled=false
 SESSION_URL_BASEPATH="https://localhost:1234"
 SESSION_URL_OUTCOME_SUFFIX="/esito"
 SESSION_URL_CANCEL_SUFFIX="/cancel"
-SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
+SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
