--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -80,8 +80,8 @@ microservice-chart:
       ECOMMERCE_EVENT_VERSION: "V1"
       SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
       SESSION_URL_BASEPATH: "https://uat.checkout.pagopa.it"
-      SESSION_URL_OUTCOME_SUFFIX: "/esito"
-      SESSION_URL_CANCEL_SUFFIX: "/cancel"
+      SESSION_URL_OUTCOME_SUFFIX: "/ecommerce-fe/esito"
+      SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
       SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
@@ -216,8 +216,8 @@ microservice-chart:
     ECOMMERCE_EVENT_VERSION: "V1"
     SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
     SESSION_URL_BASEPATH: "https://uat.checkout.pagopa.it"
-    SESSION_URL_OUTCOME_SUFFIX: "/esito"
-    SESSION_URL_CANCEL_SUFFIX: "/cancel"
+    SESSION_URL_OUTCOME_SUFFIX: "/ecommerce-fe/esito"
+    SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
     SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
