--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,7 +62,9 @@ transactions.ecommerce.retry.offset=${TRANSACTIONS_RETRY_OFFSET}
 
 transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
 
-jwt.secret=${JWT_SECRET}
+jwt.ecommerce.secretKey=${JWT_ECOMMERCE_SECRET}
+npg.notification.jwt.secret=${JWT_NPG_NOTIFICATION_SECRET}
+npg.notification.jwt.validity.time=${JWT_NPG_NOTIFICATION_VALIDITY_TIME}
 
 confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
 confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
