Chk 2263 minpods deploy (#384)
* add max surge and maxUnavailable attributes to deploy pipeline

* set maxUnavailable 0

* set maxSurge 1

* set maxSurge 1

* set maxSurge 0 and maxUnavailable 1 to have at least 2 instance available during prod deploy

* set maxSurge to 1 and maxUnavailable to 1

* set strategy definition in microservice-chart section only

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MacBook-Pro-di-Gianluca.local>
Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -155,6 +155,11 @@ microservice-chart:
           # Required
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
+  strategy:
+    type: "RollingUpdate"
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   envConfig:
     MONGO_HOST: pagopa-p-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
     MONGO_USERNAME: pagopa-p-weu-ecommerce-cosmos-account
