--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -50,6 +50,7 @@ microservice-chart:
       memory: "512Mi"
       cpu: "300m"
   autoscaling:
+    enable: true
     minReplica: 3
     maxReplica: 7
     pollingInterval: 30 # seconds
