--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <pagopa-ecommerce-commons.version>1.2.0</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>1.3.0</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
         <ecs-logging-version>1.5.0</ecs-logging-version>
         <mock-web-server.version>4.11.0</mock-web-server.version>
@@ -89,9 +89,9 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>io.swagger</groupId>
+            <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>1.6.5</version>
+            <version>2.2.19</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -265,7 +265,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>6.2.1</version>
+                <version>7.1.0</version>
                 <executions>
                     <execution>
                         <id>transaction-api</id>
@@ -355,6 +355,7 @@
                             <configOptions>
                                 <swaggerAnnotations>false</swaggerAnnotations>
                                 <openApiNullable>false</openApiNullable>
+                                <useOneOfInterfaces>true</useOneOfInterfaces>
                             </configOptions>
                             <modelPackage>it.pagopa.generated.wallet.v1.dto</modelPackage>
                             <apiPackage>it.pagopa.generated.wallet.v1.api</apiPackage>
@@ -383,29 +384,29 @@
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
-                    <execution>
+                <execution>
                         <id>nodo-rest-api-v2</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
+                    <goals>
+                        <goal>generate</goal>
+                    </goals>
+                    <configuration>
                             <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-infra/eff0d7e961328c9888d73dc17d96695301df1861/src/core/api/nodopagamenti_api/nodoPerPM/v2/_swagger.json.tpl</inputSpec>
-                            <generatorName>java</generatorName>
-                            <library>webclient</library>
-                            <generateApiDocumentation>false</generateApiDocumentation>
-                            <generateApiTests>false</generateApiTests>
-                            <generateModelTests>false</generateModelTests>
-                            <generateSupportingFiles>true</generateSupportingFiles>
-                            <configOptions>
-                                <swaggerAnnotations>false</swaggerAnnotations>
-                                <openApiNullable>false</openApiNullable>
-                            </configOptions>
+                        <generatorName>java</generatorName>
+                        <library>webclient</library>
+                        <generateApiDocumentation>false</generateApiDocumentation>
+                        <generateApiTests>false</generateApiTests>
+                        <generateModelTests>false</generateModelTests>
+                        <generateSupportingFiles>true</generateSupportingFiles>
+                        <configOptions>
+                            <swaggerAnnotations>false</swaggerAnnotations>
+                            <openApiNullable>false</openApiNullable>
+                        </configOptions>
                             <modelPackage>it.pagopa.generated.ecommerce.nodo.v2.dto</modelPackage>
                             <apiPackage>it.pagopa.generated.ecommerce.nodo.v2.api</apiPackage>
-                            <modelNameSuffix>dto</modelNameSuffix>
-                        </configuration>
-                    </execution>
-                </executions>
+                        <modelNameSuffix>dto</modelNameSuffix>
+                    </configuration>
+                </execution>
+            </executions>
             </plugin>
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
