--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -84,6 +84,7 @@ microservice-chart:
       SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
       SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
       JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
+      CHECKOUT_REDIRECT_PSP_LIST: ""
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -97,6 +98,7 @@ microservice-chart:
       NPG_API_KEY: npg-api-key
       NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
       JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
+      CHECKOUT_REDIRECT_PSP_KEYS: checkout-redirect-psp-keys
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "1.9.0"
@@ -222,6 +224,7 @@ microservice-chart:
     SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
     SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
     JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
+    CHECKOUT_REDIRECT_PSP_LIST: ""
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
