feat(checkout-redirect): add Checkout PSP API keys as Spring properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -90,3 +90,6 @@ sessionUrl.outcomeSuffix=${SESSION_URL_OUTCOME_SUFFIX}
 sessionUrl.cancelSuffix=${SESSION_URL_CANCEL_SUFFIX}
 sessionUrl.notificationUrl=${SESSION_URL_NOTIFICATION_URL}
 transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
+
+checkout.redirect.keys=${CHECKOUT_REDIRECT_PSP_KEYS}
+checkout.redirect.pspList=${CHECKOUT_REDIRECT_PSP_LIST}
