--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -89,3 +89,6 @@ SESSION_URL_BASEPATH="https://localhost:1234"
 SESSION_URL_OUTCOME_SUFFIX="/esito"
 SESSION_URL_CANCEL_SUFFIX="/cancel"
 SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
+
+checkout.redirect.keys={"psp1-redirect":"key1-redirect","psp2-redirect":"key2-redirect"}
+checkout.redirect.pspList=psp1-redirect,psp2-redirect
