feat: add redirect client builder configuration

--- a/pom.xml
+++ b/pom.xml
@@ -384,28 +384,50 @@
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
-                <execution>
-                        <id>nodo-rest-api-v2</id>
-                    <goals>
-                        <goal>generate</goal>
-                    </goals>
-                    <configuration>
-                            <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-infra/eff0d7e961328c9888d73dc17d96695301df1861/src/core/api/nodopagamenti_api/nodoPerPM/v2/_swagger.json.tpl</inputSpec>
-                        <generatorName>java</generatorName>
-                        <library>webclient</library>
-                        <generateApiDocumentation>false</generateApiDocumentation>
-                        <generateApiTests>false</generateApiTests>
-                        <generateModelTests>false</generateModelTests>
-                        <generateSupportingFiles>true</generateSupportingFiles>
-                        <configOptions>
-                            <swaggerAnnotations>false</swaggerAnnotations>
-                            <openApiNullable>false</openApiNullable>
-                        </configOptions>
-                            <modelPackage>it.pagopa.generated.ecommerce.nodo.v2.dto</modelPackage>
-                            <apiPackage>it.pagopa.generated.ecommerce.nodo.v2.api</apiPackage>
-                        <modelNameSuffix>dto</modelNameSuffix>
-                    </configuration>
-                </execution>
+                    <execution>
+                            <id>nodo-rest-api-v2</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                                <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-infra/eff0d7e961328c9888d73dc17d96695301df1861/src/core/api/nodopagamenti_api/nodoPerPM/v2/_swagger.json.tpl</inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>webclient</library>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <configOptions>
+                                <swaggerAnnotations>false</swaggerAnnotations>
+                                <openApiNullable>false</openApiNullable>
+                            </configOptions>
+                                <modelPackage>it.pagopa.generated.ecommerce.nodo.v2.dto</modelPackage>
+                                <apiPackage>it.pagopa.generated.ecommerce.nodo.v2.api</apiPackage>
+                            <modelNameSuffix>dto</modelNameSuffix>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>redirect-api-v1</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>./api-spec/redirect/redirect-api.yaml</inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>webclient</library>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <configOptions>
+                                <swaggerAnnotations>false</swaggerAnnotations>
+                                <openApiNullable>false</openApiNullable>
+                            </configOptions>
+                            <modelPackage>it.pagopa.generated.ecommerce.redirect.v1.dto</modelPackage>
+                            <apiPackage>it.pagopa.generated.ecommerce.redirect.v1.api</apiPackage>
+                            <modelNameSuffix>dto</modelNameSuffix>
+                        </configuration>
+                    </execution>
             </executions>
             </plugin>
             <plugin>
