--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,3 +93,6 @@ transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
 
 checkout.redirect.keys=${CHECKOUT_REDIRECT_PSP_KEYS}
 checkout.redirect.pspList=${CHECKOUT_REDIRECT_PSP_LIST}
+checkout.redirect.pspUrlMapping=${CHECKOUT_REDIRECT_URL_MAPPING}
+checkout.redirect.readTimeout=${CHECKOUT_REDIRECT_READ_TIMEOUT}
+checkout.redirect.connectionTimeout=${CHECKOUT_REDIRECT_CONNECTION_TIMEOUT}
