--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,6 @@ JWT_NPG_NOTIFICATION_SECRET=ODMzNUZBNTZENDg3NTYyREUyNDhGNDdCRUZDNzI3NDMzMzQwNTFE
 JWT_NPG_NOTIFICATION_VALIDITY_TIME=900
 CHECKOUT_REDIRECT_PSP_LIST=PSP1,PSP2
 CHECKOUT_REDIRECT_PSP_KEYS={"PSP1":"checkout-redirect-psp1-key","PSP2":"checkout-redirect-psp2-key"}
+CHECKOUT_REDIRECT_URL_MAPPING={PSP1:'http://localhost:8096/redirections',PSP2:'http://localhost:8096/redirections'}
+CHECKOUT_REDIRECT_READ_TIMEOUT=10000
+CHECKOUT_REDIRECT_CONNECTION_TIMEOUT=10000
