--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -135,6 +135,12 @@ microservice-chart:
     SESSION_URL_NOTIFICATION_URL: "https://api.dev.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
     JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
     CHECKOUT_REDIRECT_PSP_LIST: ""
+    CHECKOUT_REDIRECT_URL_MAPPING: >
+      { PSP1:'http://localhost' }
+
+    CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
+    CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
