--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -86,6 +86,11 @@ microservice-chart:
       SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
       JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
       CHECKOUT_REDIRECT_PSP_LIST: ""
+      CHECKOUT_REDIRECT_URL_MAPPING: >
+        { PSP1:'http://localhost' }
+
+      CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
+      CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -227,6 +232,11 @@ microservice-chart:
     SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
     JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
     CHECKOUT_REDIRECT_PSP_LIST: ""
+    CHECKOUT_REDIRECT_URL_MAPPING: >
+      { PSP1:'http://localhost' }
+
+    CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
+    CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
