--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -92,3 +92,6 @@ SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/se
 
 checkout.redirect.keys={"psp1-redirect":"key1-redirect","psp2-redirect":"key2-redirect"}
 checkout.redirect.pspList=psp1-redirect,psp2-redirect
+checkout.redirect.pspUrlMapping={"psp1-redirect":'http://localhost:8096/redirections',"psp2-redirect":'http://localhost:8096/redirections'}
+checkout.redirect.readTimeout=10000
+checkout.redirect.connectionTimeout=10000
