feat: add redirect business logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -96,3 +96,4 @@ checkout.redirect.pspList=${CHECKOUT_REDIRECT_PSP_LIST}
 checkout.redirect.pspUrlMapping=${CHECKOUT_REDIRECT_URL_MAPPING}
 checkout.redirect.readTimeout=${CHECKOUT_REDIRECT_READ_TIMEOUT}
 checkout.redirect.connectionTimeout=${CHECKOUT_REDIRECT_CONNECTION_TIMEOUT}
+checkout.redirect.pspLogoMapping=${CHECKOUT_REDIRECT_LOGO_MAPPING}
