--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -95,3 +95,4 @@ checkout.redirect.pspList=psp1-redirect,psp2-redirect
 checkout.redirect.pspUrlMapping={"psp1-redirect":'http://localhost:8096/redirections',"psp2-redirect":'http://localhost:8096/redirections'}
 checkout.redirect.readTimeout=10000
 checkout.redirect.connectionTimeout=10000
+checkout.redirect.pspLogoMapping={"psp1-redirect":'http://psp1Logo',"psp2-redirect":'http://psp2Logo'}
