--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -140,6 +140,9 @@ microservice-chart:
 
     CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
     CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+    CHECKOUT_REDIRECT_LOGO_MAPPING:
+      { PSP1:'https://host/assets/logo.png' }
+
 
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
