--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -91,6 +91,8 @@ microservice-chart:
 
       CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
       CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+      CHECKOUT_REDIRECT_LOGO_MAPPING:
+        { PSP1:'https://host/assets/logo.png' }
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -237,6 +239,8 @@ microservice-chart:
 
     CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
     CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+    CHECKOUT_REDIRECT_LOGO_MAPPING:
+      { PSP1:'https://host/assets/logo.png' }
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
