fix: add redirect payment gateway

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -154,7 +154,7 @@ paths:
           name: x-pgs-id
           schema:
             type: string
-            pattern: 'XPAY|VPOS|NPG'
+            pattern: 'XPAY|VPOS|NPG|REDIRECT'
           required: false
           description: Pgs identifier (populated by APIM policy)
       requestBody:
