--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -250,6 +250,8 @@ microservice-chart:
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
     JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
+    CHECKOUT_REDIRECT_PSP_KEYS: checkout-redirect-psp-keys
+
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
