[CHK-2319] -  checkout redirect implementation api client configuration (#397)
* feat(checkout-redirect): add secret that holds PSPs' API keys

* feat(checkout-redirect): add Checkout PSP API keys as Spring properties

* feat(checkout-redirect): add `CheckoutRedirectPspApiKeysConfig` bean to hold Checkout Redirect PSP API keys

* feat(commons): update commons version

* feat: add redirect client builder configuration

* feat: add api specs

* fix: add redirect payment gateway

* fix: move api specs

* fix: helm values

* CHK-2319 - feat: redirect business logic (#398)

* feat: add redirect business logic

* fix: resolve TODOs

* fix: add brand value for redirect payments

* fix: add error mapping

* fix: restore error mapping for NPG

* Update README.md

Co-authored-by: Fernando-Granato <117268775+Fernando-Granato@users.noreply.github.com>

* fix: remove TODO comments

---------

Co-authored-by: Fernando-Granato <117268775+Fernando-Granato@users.noreply.github.com>

---------

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>
Co-authored-by: Fernando-Granato <117268775+Fernando-Granato@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,7 @@ JWT_NPG_NOTIFICATION_SECRET=ODMzNUZBNTZENDg3NTYyREUyNDhGNDdCRUZDNzI3NDMzMzQwNTFE
 JWT_NPG_NOTIFICATION_VALIDITY_TIME=900
 CHECKOUT_REDIRECT_PSP_LIST=PSP1,PSP2
 CHECKOUT_REDIRECT_PSP_KEYS={"PSP1":"checkout-redirect-psp1-key","PSP2":"checkout-redirect-psp2-key"}
+CHECKOUT_REDIRECT_URL_MAPPING={PSP1:'http://localhost:8096',PSP2:'http://localhost:8096'}
+CHECKOUT_REDIRECT_READ_TIMEOUT=10000
+CHECKOUT_REDIRECT_CONNECTION_TIMEOUT=10000
+CHECKOUT_REDIRECT_LOGO_MAPPING={PSP1:'http://psp1Logo',PSP2:'http://psp2Logo'}
