--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -85,6 +85,13 @@ microservice-chart:
       SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
       JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
       CHECKOUT_REDIRECT_PSP_LIST: ""
+      CHECKOUT_REDIRECT_URL_MAPPING: >
+        { PSP1:'http://localhost' }
+
+      CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
+      CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+      CHECKOUT_REDIRECT_LOGO_MAPPING:
+        { PSP1:'https://host/assets/logo.png' }
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -225,6 +232,13 @@ microservice-chart:
     SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
     JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
     CHECKOUT_REDIRECT_PSP_LIST: ""
+    CHECKOUT_REDIRECT_URL_MAPPING: >
+      { PSP1:'http://localhost' }
+
+    CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
+    CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+    CHECKOUT_REDIRECT_LOGO_MAPPING:
+      { PSP1:'https://host/assets/logo.png' }
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
@@ -240,6 +254,8 @@ microservice-chart:
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
     JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
+    CHECKOUT_REDIRECT_PSP_KEYS: checkout-redirect-psp-keys
+
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
