enable autoscaling, maxSurge to 1 and maxUnavailable to 0 for dev env

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -50,8 +50,9 @@ microservice-chart:
       memory: "512Mi"
       cpu: "300m"
   autoscaling:
-    minReplica: 1
-    maxReplica: 2
+    enable: true
+    minReplica: 3
+    maxReplica: 10
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
@@ -67,6 +68,11 @@ microservice-chart:
           # metricAggregationInterval: "-1:1:0"
           metricAggregationType: Count
           targetValue: "30"
+  strategy:
+    type: "RollingUpdate"
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   envConfig:
     MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
     MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
