add graceful stop shutdown

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -97,3 +97,6 @@ checkout.redirect.pspUrlMapping=${CHECKOUT_REDIRECT_URL_MAPPING}
 checkout.redirect.readTimeout=${CHECKOUT_REDIRECT_READ_TIMEOUT}
 checkout.redirect.connectionTimeout=${CHECKOUT_REDIRECT_CONNECTION_TIMEOUT}
 checkout.redirect.pspLogoMapping=${CHECKOUT_REDIRECT_LOGO_MAPPING}
+
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=30s
