[CHK-2314] [CHK-2363] feat apm payment (#395)
* feat: update openapi with new ApmAuthRequestDetails into auth-request

* feat: invoke payment method for retrieve BRAND for email

* feat: added logic for handle apm payment

* fixed tests

* fixed: log into walletNpgApmPaymentFlow

* feat: added tests for payment gateway client

* feat: added test for TransactionRequestAuthorizationHandlerTest

* feat: added test v2/TransactionService.java

* feat: added case log for getLogo

* fix: outcome url

* feat: added client id into GET payment method by id request

* Update src/test/java/it/pagopa/transactions/services/v1/TransactionServiceTests.java

Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>

* fix: added method management into test

* feat: merge with main branch

* fix: restore branch for payment method generation

* fix: added branch commit

* fix: restore branch main

* trigger CR pipeline

---------

Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -453,6 +453,7 @@ components:
             - $ref: "#/components/schemas/CardAuthRequestDetails"
             - $ref: "#/components/schemas/CardsAuthRequestDetails"
             - $ref: "#/components/schemas/WalletAuthRequestDetails"
+            - $ref: "#/components/schemas/ApmAuthRequestDetails"
             - $ref: "#/components/schemas/RedirectionAuthRequestDetails"
           discriminator:
             propertyName: detailType
@@ -461,6 +462,7 @@ components:
               card: "#/components/schemas/CardAuthRequestDetails"
               cards: "#/components/schemas/CardsAuthRequestDetails"
               wallet: "#/components/schemas/WalletAuthRequestDetails"
+              apm: "#/components/schemas/ApmAuthRequestDetails"
               redirect: "#/components/schemas/RedirectionAuthRequestDetails"
 
       required:
@@ -571,6 +573,17 @@ components:
       example:
         detailType: "wallet"
         walletId: "walletId"
+    ApmAuthRequestDetails:
+      type: object
+      description: Additional payment authorization details for payment apm authorization
+      properties:
+        detailType:
+          description: property discriminator, used to discriminate the authorization request detail. Fixed value 'apm'
+          type: string
+      required:
+        - detailType
+      example:
+        detailType: "apm"
     RedirectionAuthRequestDetails:
       type: object
       description: Additional payment authorization details for Redirection authorization request
